[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["default", "native-tls"]}
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
